--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: csharp  
-sudo: required  
+sudo: required 
+solution: Lab1.sln
 dist: trusty  
 mono: none
 dotnet: 2.1.5
 before_script:
   - dotnet restore
+script:    # the following commands are just examples, use whatever your build process requires
+  - ./build.sh
