--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 solution: Lab1.sln
 dist: trusty  
 mono: none
-dotnet: aspnetcore-runtime-2.1
+dotnet: 2.1.300
 before_script:
   - dotnet restore
 script:    # the following commands are just examples, use whatever your build process requires
