--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,5 @@ solution: Lab1.sln
 dotnet: 2.1.300
 install:
   - nuget restore Lab1.sln
-  - nuget install xunit.runners -OutputDirectory testrunner
 script:
-  - xbuild /p:Configuration=Release Lab1.sln
-  - mono ./testrunner/xunit.runners.*/tools/xunit.console.clr4.exe ./Tests/bin/Release/Tests.dll
+  - dotnet test .\Tests\Tests.csproj
