travis dotnet restore

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ solution: Lab1.sln
 mono: none
 dotnet: 2.1.300
 install:
-  - nuget restore Lab1.sln
+  - dotnet restore
 script:
   - dotnet test .\Tests\Tests.csproj
