--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,7 @@ script:
 deploy:
   provider: heroku
   app: rsoi-lab
-  api_key: 6e01fc46-2f75-44b7-a148-3b1c44752206
+  api_key:
+    secure: 6e01fc46-2f75-44b7-a148-3b1c44752206
+  on:
+    repo: ViPeeeR/rsoi1
