--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,13 @@ language: csharp
 solution: Lab1.sln
 mono: none
 dotnet: 2.1.300
+services:
+  - docker
 install:
   - dotnet restore
+before_script:
+  - docker-compose build
+  - docker-compose run notes bundle exec rails db:test:prepare
 script:
   - dotnet test ./Tests/Tests.csproj
-  - dotnet publish ./webapp/webapp.csproj
-deploy:
-  provider: heroku
-  app: rsoi-lab
-  api_key:
-    secure: 6e01fc46-2f75-44b7-a148-3b1c44752206
-  on:
-    repo: ViPeeeR/rsoi1
+  - docker-compose run --rm notes bundle exec rake spec
